--- a/src/views/bookView.ejs
+++ b/src/views/bookView.ejs
@@ -6,12 +6,17 @@
     <title>Storystrap Template</title>
     <meta name="generator" content="Bootply" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
     <!--[if lt IE 9]>
       <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link href="css/styles.css" rel="stylesheet">
+      <!-- bower:css -->
+      <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css" />
+      <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css" />
+      <!-- endbower -->
+    <!-- inject:css -->
+    <link rel="stylesheet" href="/css/styles.css">
+    <!-- endinject -->
   </head>
   <body>
 <header class="navbar navbar-bright navbar-fixed-top" role="banner">
@@ -90,18 +95,17 @@
 
           <!--/stories-->
 
-          <% for (let i = 0; i < books.length; i++) {%>
             <div class="row">
               <br>
               <div class="col-md-2 col-sm-3 text-center">
                 <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/58.jpg" style="width:100px;height:100px" class="img-circle"></a>
               </div>
               <div class="col-md-10 col-sm-9">
-                <h3><%=books[i].title%></h3>
+                <h3><%=book.title%></h3>
                 <div class="row">
                   <div class="col-xs-9">
-                    <h4><span class="label label-default"><%=books[i].author%></span></h4><h4>
-                    <small style="font-family:courier,'new courier';" class="text-muted"><a href="<%=i%>" class="text-muted">Read More</a></small>
+                    <h4><span class="label label-default"><%=book.author%></span></h4><h4>
+                    <small style="font-family:courier,'new courier';" class="text-muted"></small>
                     </h4></div>
                   <div class="col-xs-3"></div>
                 </div>
@@ -109,7 +113,6 @@
               </div>
             </div>
             <hr>
-        <%}%>
 
           <!--/stories-->
 
@@ -167,7 +170,12 @@
   </div>
 </footer>
   <!-- script references -->
-    <script src="lib/jquery/dist/jquery.min.js"></script>
-    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+   <!-- bower:js -->
+   <script src="/lib/jquery/dist/jquery.js"></script>
+   <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
+   <!-- endbower -->
+  <!-- inject:js -->
+  <script src="/js/app.js"></script>
+  <!-- endinject -->
   </body>
 </html>
