--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -97,12 +97,16 @@
           <div class="row">
             <br>
             <div class="col-md-2 col-sm-3 text-center">
-              Sign In
+              Sign In <form name="signInForm" action="/auth/signIn" method="post">
+                User Name: <input type="text" name="userName" id="userName"><br>
+                Password: <input type="text" name="password" id="password"><br>
+                <input type="submit" value="Sign In">
+              </form>
             </div>
             <div class="col-md-10 col-sm-9">
               Sign Up <form name="signUpForm" action="/auth/signUp" method="post">
-                <input type="text" name="userName" id="userName">
-                <input type="text" name="password" id="password">
+                User Name: <input type="text" name="userName" id="userName"><br>
+                Password: <input type="text" name="password" id="password"><br>
                 <input type="submit" value="Sign Up">
               </form>
             </div>
